--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
 requires-python = ">=3.9"
 
 [project.scripts]
-ptt-cli = "pttcli.cli:cli"
+ptt-scan = "pttcli.cli:cli"
 
 [tool.pylint.MAIN]
 fail-under=9
